fix: overflowing containers

--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,8 @@
 :root {
     
 }
+html,
+body {
+    height: calc(100vh - 0.4em);
+    margin: 0.2em;
+}
